Update property image in index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+Index · HTML
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -515,7 +517,7 @@
       </div>
       <div class="section-content">
         <a href="https://www.airbnb.com/rooms/1406052317030310598" target="_blank" class="property-thumbnail">
-          <img src="https://a0.muscache.com/im/pictures/hosting/Hosting-1406052317030310598/original/d430bbe9-9f0d-4b24-bed7-ff2ebacd0e22.jpeg" alt="Oasis on the Lake">
+          <img src="https://a0.muscache.com/im/pictures/hosting/Hosting-1406052317030310598/original/0decbb9c-5e03-4cd5-bc46-a464e9e58a38.jpeg?im_w=1200" alt="Oasis on the Lake">
         </a>
         <div class="property-header">
           <div>
