--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -82,8 +81,10 @@
     margin-top: 20px;
   }
   .stat-card {
-    background: rgba(255,255,255,0.04);
-    border: 1px solid rgba(255,255,255,0.08);
+    background: rgba(15,25,35,0.6);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255,255,255,0.1);
     border-radius: 8px;
     padding: 14px 20px;
     min-width: 120px;
@@ -734,4 +735,3 @@ function toggleDay(id) {
 
 </body>
 </html>
-New task - Claude
