Modify activities for Ryan's Bachelor Party
Updated activity descriptions and added a new task.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -618,8 +618,8 @@
           <div class="day-content">
             <div class="activities">
               <div class="activity"><div class="time">3:00 PM</div><div class="desc">Check-in & settle in</div><div class="note">Claim rooms, explore the property</div></div>
-              <div class="activity"><div class="time">5:00 PM</div><div class="desc">Pool & lake time</div><div class="note">First beers, floaties at the Petree house</div></div>
-              <div class="activity"><div class="time">7:00 PM</div><div class="desc">Grill out</div><div class="note">Steaks, burgers, brats</div></div>
+              <div class="activity"><div class="time">5:00 PM</div><div class="desc">Pool & lake time</div><div class="note">First beers, floaties</div></div>
+              <div class="activity"><div class="time">7:00 PM</div><div class="desc">Grill out or order food</div><div class="note">Steaks, burgers, brats</div></div>
               <div class="activity"><div class="time">9:00 PM</div><div class="desc">Fire pit & games</div><div class="note">Poker, drinking games</div></div>
             </div>
           </div>
@@ -735,3 +735,4 @@ function toggleDay(id) {
 
 </body>
 </html>
+New task - Claude
