Update amenities and golf cost details in index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -556,7 +557,8 @@
           <ul class="perks-list">
             <li>🚤 Boats</li>
             <li>🛟 Floaties</li>
-            <li>⛳ Golf Nearby</li>
+            <li>👨 Mark Petree</li>
+            <li>🥜 Boiled Peanuts</li>
           </ul>
         </div>
       </div>
@@ -570,13 +572,13 @@
       <div class="section-content">
         <div class="amenities-grid">
           <span class="amenity">🏊 Pool</span>
+          <span class="amenity">🛁 Hot Tub</span>
           <span class="amenity">🚤 Waterfront</span>
           <span class="amenity">🛥️ Boat Dock</span>
           <span class="amenity">🛶 Kayaks</span>
           <span class="amenity">🎱 Game Room</span>
           <span class="amenity">🔥 Fire Pit</span>
           <span class="amenity">🍳 Full Kitchen</span>
-          <span class="amenity">📺 Smart TVs</span>
         </div>
       </div>
     </div>
@@ -590,7 +592,7 @@
         <p class="golf-info">There's a great course at Lake Lanier Islands — <strong>totally optional</strong>. Let us know in the group chat if you want in so we can get a headcount and book a tee time.</p>
         <div class="golf-cost">
           <span class="label">Estimated cost<span class="optional-tag">OPTIONAL</span></span>
-          <span class="amount">~$200/person</span>
+          <span class="amount">$170–200/person</span>
         </div>
         <a href="https://www.google.com/search?q=Lake+Lanier+Islands+Golf" target="_blank" class="golf-link">
           <span class="name">⛳ Lake Lanier Islands Golf</span>
@@ -636,7 +638,7 @@
           <div class="day-content">
             <div class="activities">
               <div class="activity"><div class="time">9:00 AM</div><div class="desc">Breakfast & coffee</div></div>
-              <div class="activity"><div class="time">10:30 AM</div><div class="desc">Boat & float day at the Petrees</div><div class="note">Tubing, wakeboarding, lake cruising</div></div>
+              <div class="activity"><div class="time">10:30 AM</div><div class="desc">Boat & float day at the Petrees</div><div class="note">Tubing, lake cruising</div></div>
               <div class="activity"><div class="time">2:00 PM</div><div class="desc">Chill time</div></div>
               <div class="activity"><div class="time">5:00 PM</div><div class="desc">Game day tournament</div><div class="note">Pong, spikeball, bags, pool, ping pong</div></div>
               <div class="activity"><div class="time">8:00 PM</div><div class="desc">Dinner & poker night</div></div>
@@ -654,7 +656,7 @@
           </div>
           <div class="day-content">
             <div class="activities">
-              <div class="activity"><div class="time">8:00 AM</div><div class="desc">Golf at Lake Lanier Islands</div><div class="note">Optional — ~$200/person</div></div>
+              <div class="activity"><div class="time">8:00 AM</div><div class="desc">Golf at Lake Lanier Islands</div><div class="note">Optional — $170–200/person</div></div>
               <div class="activity"><div class="time">12:00 PM</div><div class="desc">Brunch at Pelican Pete's or Twisted Oar</div></div>
               <div class="activity"><div class="time">2:00 PM</div><div class="desc">Lake time round 2</div><div class="note">More boat, more floaties</div></div>
               <div class="activity"><div class="time">6:00 PM</div><div class="desc">Boat cruise & dinner at Pelican Pete's or Twisted Oar</div></div>
@@ -689,11 +691,6 @@
       </div>
       <div class="section-content">
         <div class="packing-grid">
-          <div class="packing-item"><span class="check-box"></span> Swimsuit</div>
-          <div class="packing-item"><span class="check-box"></span> Sunglasses</div>
-          <div class="packing-item"><span class="check-box"></span> Casual clothes</div>
-          <div class="packing-item"><span class="check-box"></span> Golf gear (if playing)</div>
-          <div class="packing-item"><span class="check-box"></span> Phone charger</div>
           <div class="packing-item"><span class="check-box"></span> A good attitude</div>
         </div>
       </div>
@@ -708,7 +705,7 @@
         <div class="cost-grid">
           <div class="cost-row"><span class="label">Airbnb (3 nights)</span><span class="amount">$5,706</span></div>
           <div class="cost-row"><span class="label">÷ 16 people</span><span class="amount">$357 each</span></div>
-          <div class="cost-row optional"><span class="label">Golf<span class="optional-tag">OPTIONAL</span></span><span class="amount">~$200</span></div>
+          <div class="cost-row optional"><span class="label">Golf<span class="optional-tag">OPTIONAL</span></span><span class="amount">$170–200</span></div>
           <div class="cost-row total"><span class="label">Your share (housing only)</span><span class="amount">~$357</span></div>
         </div>
         <div class="cost-note">Final price depends on headcount. No payment needed yet — we'll sort it out in the group chat once we know who's in.</div>
