--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
     </div>
     <div class="stat-card">
       <div class="label">Per Person (Tentative)</div>
-      <div class="value">~$405</div>
+      <div class="value">~$328</div>
     </div>
   </div>
 </div>
@@ -531,25 +531,22 @@
       </div>
       <div class="section-content">
         <div class="property-thumbnails">
-          <a href="https://www.airbnb.com/rooms/1406052317030310598" target="_blank" class="property-thumbnail">
-            <img src="https://a0.muscache.com/im/pictures/hosting/Hosting-1406052317030310598/original/0decbb9c-5e03-4cd5-bc46-a464e9e58a38.jpeg?im_w=1200" alt="Oasis on the Lake">
-          </a>
-          <a href="https://www.airbnb.com/rooms/1406052317030310598" target="_blank" class="property-thumbnail">
-            <img src="https://a0.muscache.com/im/pictures/hosting/Hosting-1406052317030310598/original/8f67e242-eaf2-47d3-911c-1dd6dc6ca897.jpeg?im_w=1440" alt="Oasis on the Lake">
+          <a href="https://www.houfy.com/115424" target="_blank" class="property-thumbnail">
+            <img src="https://www.assets.houfy.com/assets/images/properties/115424/48129303516aa018ffc346fd50f70e0e.jpg" alt="Sunrise Villa">
           </a>
         </div>
         <div class="property-header">
           <div>
-            <div class="property-name">Oasis on the Lake</div>
-            <div class="property-location">Lake Lanier, Georgia</div>
+            <div class="property-name">Sunrise Villa</div>
+            <div class="property-location">Flowery Branch, Georgia</div>
           </div>
-          <a href="https://www.airbnb.com/rooms/1406052317030310598" target="_blank" class="view-btn">View Listing →</a>
+          <a href="https://www.houfy.com/115424" target="_blank" class="view-btn">View Listing →</a>
         </div>
         <div class="info-grid">
-          <div class="info-card"><div class="label">Bedrooms</div><div class="value">7 BR / 7 BA</div></div>
           <div class="info-card"><div class="label">Guests</div><div class="value">16 people</div></div>
           <div class="info-card"><div class="label">Check In</div><div class="value">Thu, May 28</div></div>
           <div class="info-card"><div class="label">Check Out</div><div class="value">Sun, May 31</div></div>
+          <div class="info-card"><div class="label">Nights</div><div class="value">3</div></div>
         </div>
         <div class="perks-box">
           <h4>Petree House Access</h4>
@@ -703,10 +700,10 @@
       </div>
       <div class="section-content">
         <div class="cost-grid">
-          <div class="cost-row"><span class="label">Airbnb (3 nights)</span><span class="amount">$6,471</span></div>
-          <div class="cost-row"><span class="label">÷ 16 people</span><span class="amount">$405 each</span></div>
+          <div class="cost-row"><span class="label">Sunrise Villa (3 nights)</span><span class="amount">$5,243</span></div>
+          <div class="cost-row"><span class="label">÷ 16 people</span><span class="amount">$328 each</span></div>
           <div class="cost-row optional"><span class="label">Golf<span class="optional-tag">OPTIONAL</span></span><span class="amount">$170–200</span></div>
-          <div class="cost-row total"><span class="label">Your share (housing only)</span><span class="amount">~$405</span></div>
+          <div class="cost-row total"><span class="label">Your share (housing only)</span><span class="amount">~$328</span></div>
         </div>
         <div class="cost-note">Final price depends on headcount. No payment needed yet — we'll sort it out in the group chat once we know who's in.</div>
       </div>
@@ -732,3 +729,4 @@ function toggleDay(id) {
 
 </body>
 </html>
+New task - Claude
