Add additional property thumbnail image

--- a/index.html
+++ b/index.html
@@ -534,6 +534,9 @@
           <a href="https://www.houfy.com/115424" target="_blank" class="property-thumbnail">
             <img src="https://www.assets.houfy.com/assets/images/properties/115424/48129303516aa018ffc346fd50f70e0e.jpg" alt="Sunrise Villa">
           </a>
+          <a href="https://www.houfy.com/115424" target="_blank" class="property-thumbnail">
+            <img src="https://www.assets.houfy.com/assets/images/properties/115424/c3d5181909c266a8d66fc118f533503b.jpg" alt="Sunrise Villa">
+          </a>
         </div>
         <div class="property-header">
           <div>
